--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: H.Li Blog
 SEOTitle: 永远即等待的博客 | Hong.Li Blog
 header-img: img/home-bg.jpg
 email: leehong2004@gmail.com
-description: ""
+description: "Do one thing at a time, and do well"
 keyword: ""
 url: ""              # your host, for absolute URL
 baseurl: ""          # for example, '/blog' if your blog hosted on 'host/blog'
