--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ sidebar-avatar: /img/avatar-lih.png      # use absolute URL, seeing it's used in
 
 
 # Featured Tags
-featured-tags: true                     # whether or not using Feature-Tags
+featured-tags: false                     # whether or not using Feature-Tags
 featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
 
 
